--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.4.11"
+serde = { version = "1.0", features = ["derive"] }
 anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
 solana-sdk = "1.15.2"
-once_cell = "1.17.1"
+
+[dependencies.rocket_contrib]
+version = "0.4.2"
+default-features = false
+features = ["json"]
