--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.4.11"
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
 anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
 solana-sdk = "1.15.2"
