--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -15,6 +15,7 @@ serde_derive = "1.0"
 anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
 solana-sdk = "1.15.2"
+todo = { path = "../programs/todo", features = ["no-entrypoint"]}
 
 [dev-dependencies]
 axum-macros = "0.3.7"
