--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,7 +14,8 @@ serde_json = "1.0"
 serde_derive = "1.0"
 anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
-solana-sdk = "1.15.2"
+solana-sdk = "1.14.18"
+solana-account-decoder = "1.14.18"
 todo = { path = "../programs/todo", features = ["no-entrypoint"]}
 
 [dev-dependencies]
