--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,6 +16,7 @@ anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
 solana-sdk = "1.14.18"
 solana-account-decoder = "1.14.18"
+arrayref = "0.3.7"
 todo = { path = "../programs/todo", features = ["no-entrypoint"]}
 
 [dev-dependencies]
