--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,18 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# http
 axum = "0.6.18"
 tokio = { version = "1.23.0", features = ["full"] }
 tower = { version = "0.4.13", features = ["timeout"] }
+axum-macros = "0.3.7"
+# serialization
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+# solana
 anchor-client = { version = "0.27.0", features = ["debug"] }
 anchor-lang = "0.27.0"
 solana-sdk = "1.14.18"
-solana-account-decoder = "1.14.18"
-arrayref = "0.3.7"
+# misc
+config = { version = "0.13", default-features = false, features = ["toml"] }
+# apps
 todo = { path = "../programs/todo", features = ["no-entrypoint"]}
-
-[dev-dependencies]
-axum-macros = "0.3.7"
