--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -9,8 +9,12 @@ edition = "2021"
 # http
 axum = "0.6.18"
 tokio = { version = "1.23.0", features = ["full"] }
-tower = { version = "0.4.13", features = ["timeout"] }
+tower = { version = "0.4.13", features = ["util", "timeout"] }
 axum-macros = "0.3.7"
+tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
+# logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # serialization
 serde = "1.0"
 serde_json = "1.0"
